# dballe

./: .buildinfo  .clang-format  .copr.enc  .gitignore  .travis-build.sh  .travis.yml  BENCHMARKS  ChangeLog  LICENSE  Makefile.am  NEWS.md  ODBC-TRACE-HOWTO  README  README.md  TODO  TODO.provami  UPGRADE-5.x  aliases.html  autogen.sh  bench-plot  benchmark-stats  btable.html  configure.ac  connect.html  dballe.spec  env.html  fabfile.py  genindex.html  get_line_no  howtos.html  index.html  libdballe-bufrex.m4  libdballe-bufrex.pc.in  libdballe-core.m4  libdballe-core.pc.in  libdballe-db.m4  libdballe-db.pc.in  libdballe-msg.m4  libdballe-msg.pc.in  libdballe.m4  (+26 more)
bench/: .gitignore  20160311181304_postgresql_c4354a67f0b12a3c10d0c401644af73fc7ead9ab.csv  20160311181419_mysql_c4354a67f0b12a3c10d0c401644af73fc7ead9ab.csv  20160311181445_sqlite_c4354a67f0b12a3c10d0c401644af73fc7ead9ab.csv  20160311181512_mem_c4354a67f0b12a3c10d0c401644af73fc7ead9ab.csv  20160311181808_postgresql_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311181925_mysql_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311181951_sqlite_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311182018_mem_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311184535_mem_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311184535_mysql_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311184535_postgresql_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160311184535_sqlite_c966a1de4e52ff6da991b7f104396d475a0e1385.csv  20160322132218_mem_14c890a8f65dcc7c8c34dea121c5c608f98123f9.csv  20160322132218_mysql_14c890a8f65dcc7c8c34dea121c5c608f98123f9.csv  20160322132218_postgresql_14c890a8f65dcc7c8c34dea121c5c608f98123f9.csv  20160322132218_sqlite_14c890a8f65dcc7c8c34dea121c5c608f98123f9.csv  20160322173923_mem_fa434f55f18713bf8d8ec1b4b37788f61a98e22e.csv  20160322173923_mysql_fa434f55f18713bf8d8ec1b4b37788f61a98e22e.csv  20160322173923_odbc_fa434f55f18713bf8d8ec1b4b37788f61a98e22e.csv  20160322173923_postgresql_fa434f55f18713bf8d8ec1b4b37788f61a98e22e.csv  20160322173923_sqlite_fa434f55f18713bf8d8ec1b4b37788f61a98e22e.csv  20160322174314_sqlitev7_fa434f55f18713bf8d8ec1b4b37788f61a98e22e.csv  20160322183338_sqlitev7_7988e1524eca004b36b0879cd89e2dc2a322f097.csv  20160322213408_sqlitev7_e59b5b7b0d9a39d0581cd1dddb14d30807fdc6a3.csv  20160323091550_sqlitev7_75515371953e731641c686c301da6aba00724a3e.csv  20160323094108_sqlitev7_fb6a85827a71ca6e5ac6071ea82b6c393b134b11.csv  20160323121851_sqlitev7_5a000eda51e9a741def19a185bbf5fbb8de1004d.csv  20160323122115_sqlitev7_5a000eda51e9a741def19a185bbf5fbb8de1004d.csv  20160323124925_sqlitev7_a3d1e3ec15ce9d8185e831110efadb9de3cdb104.csv  20160323155114_sqlitev7_54b9ba2e600bab1c35ef59a54ff62eea348ba2cf.csv  20160323170651_sqlitev7_c03b6a4e3137058f1b5f425713a6d26854282b4b.csv  20160324095503_sqlitev7_0335bf8bc418f05c982299b095bff72158dc38cf.csv  20160324164123_sqlitev7_1a0977a6106e7ead771ddfc02387dd298b5739ae.csv  20160325103739_sqlitev7_ce1e01d5616ccb65bc2ce5d8b6f6210b53aae075.csv  20160325104919_sqlitev7_d23f30d48a4dc472adc1e78c76dfbfab8d9ec657.csv  20160325165747_sqlitev7_f1e3c89ea09a507823a2f6058b101244b30837de.csv  20160325170119_sqlitev7_9d6801c08aa9fbc2533a556fe55412acc81eb8ee.csv  20160326082613_sqlitev7_d9e5a9a6dabc3f674b37ba0b0dea48f0565a015f.csv  20160326094541_sqlitev7_49daba5b9e9004ec0e155fff71a81cb25786624b.csv  (+31 more)
dballe/: Makefile.am  bench-main.cc  bench-run  cmdline.c  cmdline.h  cursor-test.cc  cursor.cc  cursor.h  data-test.cc  data.cc  data.h  db-test.cc  db.cc  db.h  dba_cmdline.c  dba_cmdline.h  dba_file.c  dba_file.h  dba_init.c  dba_init.h  dba_marshal.c  dba_marshal.h  dballe.dox  exporter-test.cc  exporter.cc  exporter.h  file-test.cc  file-tut.cc  file.cc  file.h  formatter.c  formatter.h  fwd.h  importer-test.cc  importer.cc  importer.h  init.c  init.h  main-bufrex.dox  main-core.dox  (+39 more)
dballe++/: Makefile.am  bindhelp.h  bufrex.cc  bufrex.h  db.cc  db.h  error.cc  error.h  format.cc  format.h  init.cc  init.h  msg.cc  msg.h  record.cc  record.h  var.cc  var.h
doc/: .gitignore  Makefile.am  add_templates_to_manpage  build-docs.in  conf.py  db.dia  db.eps  dballe_env.md  doxy2swig.py  fapi.md  fapi.tex  fapi_aliases.md  fapi_btable.md  fapi_concepts.md  fapi_connect.md  fapi_ltypes.md  fapi_parms.md  fapi_reference.md  fapi_tranges.md  fapi_transactions.md  fapi_walkthrough.md  fortran-reference.md  guide.tex  howtos.rst  install.tex  integrate_dbadb_manpage  intro.tex  introduzione.odt  libdballe-bufrex.dox.in  libdballe-core.dox.in  libdballe-db.dox.in  libdballe-msg.dox.in  libdballe.dox.in  libdballef.dox.in  libdballepp.dox.in  local.bib  maintainance.tex  make_fortran_reference  meson.build  mkaliasdoc  (+6 more)
examples/: Makefile.am  download_clouds.pl  dump_ana.f  maexport.py  run_xplanet  xplanet.conf
extra/: Makefile.am  cmdline.c  cmdline.cc  cmdline.h  conversion.c  conversion.cc  conversion.h  processor.c  processor.cc  processor.h  runtest  test-bufr-table.txt  test-crex-d-table.txt  test-repinfo1.csv  test-repinfo2.csv  test-utils-bufrex.cc  test-utils-bufrex.h  test-utils-core.cc  test-utils-core.h  test-utils-db.h  test-utils-msg.cc  test-utils-msg.h  test-utils.cc  test-utils.h  tut-main.cc
fortran/: .clang-format-ignore  .gitignore  Makefile.am  binding.cc  check-utils.h  check_attrs.f  check_attrs.f90  check_cached_anaid.f90  check_connect_wipe.f90  check_fdballe.f  check_fdballe.f90  check_fdballe_oldapi.f90  check_messages.f90  check_messages_json.f90  check_messages_stdinstdout.f90  check_missing.f90  check_missing_msg.f90  check_multiplehandler.f90  check_range.f90  check_real0.f90  check_segfault1.f90  check_set.f90  check_spiegab.f90  check_transactions1.f90  common.cc  common.h  commonapi.cc  commonapi.h  concepts.html  dballe.html  dballef.f90  dballef.h  dballeff.h  dbapi.cc  dbapi.h  dbsimple.h  dbtest.f90  dump_dballe.f  dump_dballe.f90  dumpmsg_dballe.f  (+28 more)
provami/: Makefile.am  dballe  dballecsv  notes  populate.py  provami  provami.1  provami.py  regenerate-provami-manpage  run-local-dballecsv  run-local-provami  test-provami
(+2764 files in other folders)
